--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">รีวิวลูกค้า</h2>
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
-                    <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihY_6J8FPPsBHSB86r7InDz6T2nVGAtW6CQGMeS5qSXx_DlBZx7OORrQiEjRpXSP6u9NdLihA4VHg5j_pGuDbNnK-xIqf0SniuSf6HbE57FsLXFILFnJ7-0tZUTapAqxqxugPh2t97Dy_7vC90=w1280" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-                    <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihZl9bS215-V7ApjzCzhSc5cOrXoUYz7nSZbFioKeoJOmQdt6huZghE0_QmzdBBKoiXrAejM_SYAcKLIx5XfUpP3ZH4NXcLpZpiKvU6QEIjvANwaDHn1CsU6OBaAPZ_8kuia8wRUjUv-0knP6X-wKCY=w1280" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-                    <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYg_x26WIW4Z3HZI0EW0GuzEBc9xH5TuqJfhdOGUguMCYgraKK3YX8u293zmJ4JHrp6a_GljNrAKNiqpZ1uNGkpDP2jkZBGEulkhmg0BedVm2E0NVJAd1LUm_LENGHc8I_3cVGMP9QwQav0Nh4=w1280" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-                    <img src="https://lh3.googleusercontent.com/drive-viewer/AKGpihYp7HdjH4tCBlvIf1uD4ECaZ-06vXry7XSghzVxrLr-o5Sm7IYwWo-NFsmAmKZx_DU69FsB4qh40uFsc3G32AOXB3-7oM9Yo6TOo8lH987HLHFu7Sbbc3XDuGc1N-cqy0YzFTFDxefQ9rDVIU=w1280" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+                    <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+                    <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+                    <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+                    <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
                     <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 5" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
                     <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 6" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
                     <img src="https://placehold.co/400x600/ECDCBF/A31D1D?text=รีวิว" alt="รีวิวลูกค้า 7" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
