--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         </div>
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="md:hidden hidden bg-secondary border-t border-gray-200">
-            <a href="#about" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">เกี่ยวกับเรา</a>
             <a href="#appraisal" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ประเมินราคา</a>
             <a href="#steps" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ขั้นตอน</a>
             <a href="#reviews" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">รีวิว</a>
+            <a href="#about" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">เกี่ยวกับเรา</a>
             <a href="#contact" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ติดต่อเรา</a>
         </div>
     </header>
@@ -322,6 +322,50 @@
                         </div>
                     </div>
                     <!-- Review Card 4 -->
+                    <div class="bg-primary p-6 rounded-lg shadow-md flex flex-col">
+                        <div class="flex text-yellow-400 mb-2">
+                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        </div>
+                        <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
+                        <div class="flex items-center mt-auto">
+                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
+                        </div>
+                    </div>
+                    <!-- Review Card 5 -->
+                    <div class="bg-primary p-6 rounded-lg shadow-md flex flex-col">
+                        <div class="flex text-yellow-400 mb-2">
+                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        </div>
+                        <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
+                        <div class="flex items-center mt-auto">
+                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
+                        </div>
+                    </div>
+                    <!-- Review Card 6 -->
+                    <div class="bg-primary p-6 rounded-lg shadow-md flex flex-col">
+                        <div class="flex text-yellow-400 mb-2">
+                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        </div>
+                        <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
+                        <div class="flex items-center mt-auto">
+                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
+                        </div>
+                    </div>
+                    <!-- Review Card 7 -->
+                    <div class="bg-primary p-6 rounded-lg shadow-md flex flex-col">
+                        <div class="flex text-yellow-400 mb-2">
+                            <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        </div>
+                        <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
+                        <div class="flex items-center mt-auto">
+                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
+                        </div>
+                    </div>
+                    <!-- Review Card 8 -->
                     <div class="bg-primary p-6 rounded-lg shadow-md flex flex-col">
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
