--- a/index.html
+++ b/index.html
@@ -402,11 +402,11 @@
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-2xl md:text-3xl font-bold text-dark-red mb-8">พื้นที่ให้บริการ</h2>
                 <div class="flex flex-wrap justify-center gap-4 text-lg">
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">📍 อุดรธานี</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">📍 ขอนแก่น</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">📍 หนองคาย</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">📍 หนองบัวลำภู</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">📍 และจังหวัดใกล้เคียง</span>
+                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">อุดรธานี</span>
+                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">ขอนแก่น</span>
+                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">หนองคาย</span>
+                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">หนองบัวลำภู</span>
+                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">และจังหวัดใกล้เคียง</span>
                 </div>
             </div>
         </section>
