--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </header>
 
     <main>
-        <section id="home" class="relative h-[70vh] bg-cover bg-center flex items-center justify-center" style="background-image: url('images GitHub/Banner/Banner.jpg');">
+        <section id="home" class="relative h-[70vh] bg-cover bg-center flex items-center justify-center" style="background-image: url('images GitHub/Banner/Banner');">
             <div class="absolute inset-0 bg-black bg-opacity-50"></div>
             <div class="relative text-center text-white p-6 z-10">
                 <h2 class="text-3xl md:text-5xl font-bold tracking-tight drop-shadow-lg">รับซื้อตั๋วจำนำทอง</h2>
