--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากครับ เล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="https://placehold.co/40x40/D84040/FFFFFF?text=A" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="images GitHub/Photo/Photo 1 (1)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.อุดรธานี</p>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำครับ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="https://placehold.co/40x40/D84040/FFFFFF?text=B" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="images GitHub/Photo/Photo 1 (2)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองบัวลำภู</p>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก พูดจาดีมากๆค่ะ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="https://placehold.co/40x40/D84040/FFFFFF?text=C" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="images GitHub/Photo/Photo 1 (3)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ขอนแก่น</p>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="images GitHub/Photo/Photo 1 (4)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="images GitHub/Photo/Photo 1 (5)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="https://placehold.co/40x40/D84040/FFFFFF?text=D" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="images GitHub/Photo/Photo 1 (6)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
