--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     
     <title>รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง</title>
     <meta name="description" content="รับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานีและจังหวัดใกล้เคียง ให้ราคาสูง ยุติธรรม บริการรวดเร็ว ได้เงินสดทันที ประเมินราคาออนไลน์ฟรี!">
-    <meta name="keywords" content="รับซื้อตั๋วจำนำ, รับซื้อตั๋วจำนำทอง, ตั๋วจำนำ, อุดรธานี, ขอนแก่น, หนองคาย, หนองบัวลำภู, ขายตั๋วจำนำ, ไถ่ถอนทอง, Golden18 Udon, คุณต๋อง">
-    <meta name="author" content="รับซื้อตั๋วจำนำทอง By คุณต๋อง (Golden18 Udon)">
-    <link rel="canonical" href="https://sites.google.com/view/golden18udon/home">
+    <meta name="keywords" content="รับซื้อตั๋วจำนำ, รับซื้อตั๋วจำนำทอง, ขายตั๋วจำนำทอง, ตั๋วจำนำ, ขายตั๋วจำนำ, รับซื้อตั๋วจำนำอุดรธานี, รับซื้อตั๋วจำนำขอนแก่น, รับซื้อตั๋วจำนำหนองคาย, รับซื้อตั๋วจำนำหนองบัวลำภู, ขายตั๋วจำนำ, ไถ่ถอนทอง, Gold18 Udon, คุณต๋อง">
+    <meta name="author" content="รับซื้อตั๋วจำนำทอง By คุณต๋อง (Gold18Udon)">
+    <link rel="canonical" href="https://gold18udon.github.io/">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sites.google.com/view/golden18udon/home">
+    <meta property="og:url" content="https://gold18udon.github.io/">
     <meta property="og:title" content="รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง">
     <meta property="og:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานี ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
-    <meta property="og:image" content="images GitHub/Banner/Banner.jpg">
+    <meta property="og:image" content="images GitHub/Banner/Banner.png">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://sites.google.com/view/golden18udon/home">
+    <meta property="twitter:url" content="https://gold18udon.github.io/">
     <meta property="twitter:title" content="รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง">
     <meta property="twitter:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานี ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
-    <meta property="twitter:image" content="images GitHub/Banner/Banner.jpg">
+    <meta property="twitter:image" content="images GitHub/Banner/Banner.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -32,10 +32,10 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "รับซื้อตั๋วจำนำทอง By คุณต๋อง (Golden18 Udon)",
+      "name": "รับซื้อตั๋วจำนำทอง By คุณต๋อง (Gold18 Udon)",
       "image": "images GitHub/Logo/Logo.png",
-      "@id": "https://sites.google.com/view/golden18udon/home",
-      "url": "https://sites.google.com/view/golden18udon/home",
+      "@id": "https://gold18udon.github.io/",
+      "url": "https://gold18udon.github.io/",
       "telephone": "+66991013426",
       "priceRange": "฿฿",
       "address": {
