--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta property="og:url" content="https://gold18udon.github.io/">
     <meta property="og:title" content="รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง">
     <meta property="og:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานี ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
-    <meta property="og:image" content="images GitHub/Banner/Banner.png">
+    <meta property="og:image" content="P-GitHub/Banner/Banner.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gold18udon.github.io/">
     <meta property="twitter:title" content="รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง">
     <meta property="twitter:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานี ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
-    <meta property="twitter:image" content="images GitHub/Banner/Banner.png">
+    <meta property="twitter:image" content="P-GitHub/Banner/Banner.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +33,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "รับซื้อตั๋วจำนำทอง By คุณต๋อง (Gold18 Udon)",
-      "image": "images GitHub/Logo/Logo.png",
+      "image": "P-GitHub/Logo/Logo.png",
       "@id": "https://gold18udon.github.io/",
       "url": "https://gold18udon.github.io/",
       "telephone": "+66991013426",
@@ -102,7 +102,7 @@
     <header class="bg-secondary shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="flex items-center space-x-3">
-                <img src="images GitHub/Logo/Logo.png" alt="Logo ร้านรับซื้อตั๋วจำนำทอง By คุณต๋อง" class="h-10 w-10 rounded-full object-cover">
+                <img src="P-GitHub/Logo/Logo.png" alt="Logo ร้านรับซื้อตั๋วจำนำทอง By คุณต๋อง" class="h-10 w-10 rounded-full object-cover">
                 <h1 class="text-base md:text-lg font-semibold text-gray-800">By คุณต๋อง</h1>
             </a>
             <nav class="hidden md:flex items-center space-x-8 text-gray-700 font-medium">
@@ -125,7 +125,7 @@
     </header>
 
     <main>
-        <section id="home" class="relative h-[70vh] bg-cover bg-center flex items-center justify-center" style="background-image: url('images GitHub/Banner/Banner');">
+        <section id="home" class="relative h-[70vh] bg-cover bg-center flex items-center justify-center" style="background-image: url('P-GitHub/Banner/Banner.png');">
             <div class="absolute inset-0 bg-black bg-opacity-50"></div>
             <div class="relative text-center text-white p-6 z-10">
                 <h2 class="text-3xl md:text-5xl font-bold tracking-tight drop-shadow-lg">รับซื้อตั๋วจำนำทอง</h2>
@@ -277,7 +277,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากครับ เล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="images GitHub/Photo/Photo 1 (1)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/Photo 1 (1)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.อุดรธานี</p>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำครับ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="images GitHub/Photo/Photo 1 (2)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/Photo 1 (2)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองบัวลำภู</p>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก พูดจาดีมากๆค่ะ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="images GitHub/Photo/Photo 1 (3)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/Photo 1 (3)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ขอนแก่น</p>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="images GitHub/Photo/Photo 1 (4)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/Photo 1 (4)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="images GitHub/Photo/Photo 1 (5)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/Photo 1 (5)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="images GitHub/Photo/Photo 1 (6)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/Photo 1 (6)" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
