--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gold18udon.github.io/">
     <meta property="og:title" content="รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง">
-    <meta property="og:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานี ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
-    <meta property="og:image" content="P-GitHub/Banner/Banner.png">
+    <meta property="og:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานีและจังหวัดใกล้เคียง ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
+    <meta property="og:image" content="https://gold18udon.github.io/P-GitHub/Banner/Bn1.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gold18udon.github.io/">
     <meta property="twitter:title" content="รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง">
     <meta property="twitter:description" content="บริการรับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานี ให้ราคาสูงและยุติธรรม ประเมินราคาฟรี!">
-    <meta property="twitter:image" content="P-GitHub/Banner/Banner.png">
+    <meta property="twitter:image" content="https://gold18udon.github.io/P-GitHub/Banner/Bn1.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +33,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "รับซื้อตั๋วจำนำทอง By คุณต๋อง (Gold18 Udon)",
-      "image": "P-GitHub/Logo/Logo.png",
+      "image": "https://gold18udon.github.io/P-GitHub/Banner/Bn1.png",
       "@id": "https://gold18udon.github.io/",
       "url": "https://gold18udon.github.io/",
       "telephone": "+66991013426",
@@ -52,7 +52,7 @@
         "opens": "09:00",
         "closes": "17:30"
       },
-      "sameAs": ["https://lin.ee/4WGZnHX","https://web.facebook.com/Gold18udon","https://www.instagram.com/gold18udon","https://www.youtube.com/@gold18udon"]
+      "sameAs": ["https://lin.ee/4WGZnHX","https://web.facebook.com/Gold18udon","https://www.instagram.com/gold18udon","https://www.youtube.com/@gold18udon","https://www.tiktok.com/@gold18udon"]
     }
     </script>
 
