--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </header>
 
     <main>
-        <section id="home" class="relative h-[70vh] bg-cover bg-center flex items-center justify-center" style="background-image: url('P-GitHub/Banner/Banner.png');">
+        <section id="home" class="relative h-[50vh] bg-cover bg-center flex items-center justify-center" style="background-image: url('P-GitHub/Banner/Banner.png');">
             <div class="absolute inset-0 bg-black bg-opacity-50"></div>
             <div class="relative text-center text-white p-6 z-10">
                 <h2 class="text-3xl md:text-5xl font-bold tracking-tight drop-shadow-lg">รับซื้อตั๋วจำนำทอง</h2>
@@ -135,7 +135,26 @@
                 </a>
             </div>
         </section>
-
+<section class="bg-secondary py-4">
+    <div class="container mx-auto flex justify-center items-center space-x-6">
+        <span class="font-medium text-gray-700">ติดต่อเราผ่าน:</span>
+        <a href="https://lin.ee/4WGZnHX" target="_blank" class="text-3xl text-gray-500 hover:text-green-500 transition-colors" aria-label="Line">
+            <i class="fab fa-line"></i>
+        </a>
+        <a href="https://web.facebook.com/Gold18udon" target="_blank" class="text-3xl text-gray-500 hover:text-blue-600 transition-colors" aria-label="Facebook">
+            <i class="fab fa-facebook-square"></i>
+        </a>
+        <a href="https://www.tiktok.com/@gold18udon" target="_blank" class="text-3xl text-gray-500 hover:text-black transition-colors" aria-label="TikTok">
+            <i class="fab fa-tiktok"></i>
+        </a>
+         <a href="https://www.instagram.com/gold18udon" target="_blank" class="text-3xl text-gray-500 hover:text-pink-500 transition-colors" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+         <a href="https://www.youtube.com/@gold18udon" target="_blank" class="text-3xl text-gray-500 hover:text-red-600 transition-colors" aria-label="YouTube">
+            <i class="fab fa-youtube"></i>
+        </a>
+    </div>
+</section>
         <section id="about" class="py-16 md:py-20 bg-secondary">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
