--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
                         <div>
                             <label for="pawnDate" class="block font-medium text-gray-700 mb-1">วันที่จำนำ</label>
                             <input type="date" id="pawnDate" class="w-full bg-gray-100 text-gray-800 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-accent" required>
+                        <div>
+                            <label for="phone" class="block font-medium text-gray-700 mb-1">เบอร์โทรศัพท์ติดต่อกลับ</label>
+                            <input type="tel" id="phone" class="w-full bg-gray-100 text-gray-800 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-accent" placeholder="เช่น 0812345678" required>
+                        </div>
                         </div>
                         <button type="submit" class="w-full btn-primary font-bold py-3 rounded-lg text-lg mt-4">
                             ✨ คำนวณราคา
@@ -435,10 +439,11 @@
             const goldWeight = document.getElementById('goldWeight').value;
             const interestRate = document.getElementById('interestRate').value;
             const pawnDate = document.getElementById('pawnDate').value;
-            
+            const phone = document.getElementById('phone').value;
+
             const formattedDate = pawnDate ? new Date(pawnDate).toLocaleDateString('th-TH', { year: 'numeric', month: 'long', day: 'numeric' }) : 'ไม่ได้ระบุ';
 
-            const message = `สวัสดีครับ สนใจประเมินราคาตั๋วจำนำครับ\n\n- เงินต้น: ${principal} บาท\n- น้ำหนักทอง: ${goldWeight} บาท\n- ดอกเบี้ย: ${interestRate}%\n- วันที่จำนำ: ${formattedDate}\n\nรบกวนประเมินราคาให้ด้วยครับ`;
+            const message = `สวัสดีครับ สนใจประเมินราคาตั๋วจำนำครับ\n\n- เงินต้น: ${principal} บาท\n- น้ำหนักทอง: ${goldWeight} บาท\n- ดอกเบี้ย: ${interestRate}%\n- วันที่จำนำ: ${formattedDate}\n- เบอร์โทรติดต่อ: ${phone}\n\nรบกวนประเมินราคาให้ด้วยครับ`;
 
             const lineURL = `https://lin.ee/4WGZnHX`;
             
