--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         <div class="flex text-yellow-400 mb-2">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
-                        <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
+                        <p class="text-gray-600 mb-4 flex-grow">บริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
                            <img src="P-GitHub/Photo/P1 (8).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
