--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>รับซื้อตั๋วจำนำทอง อุดรธานี | ราคาดี ได้เงินเร็ว - By คุณต๋อง</title>
+    <title>รับซื้อตั๋วจำนำทอง อุดรธานี ขอนแก่น กรุงเทพฯ | ราคาดี - By คุณต๋อง</title>
     <meta name="description" content="รับซื้อตั๋วจำนำทองและสินทรัพย์มีค่าทุกประเภทในอุดรธานีและจังหวัดใกล้เคียง ให้ราคาสูง ยุติธรรม บริการรวดเร็ว ได้เงินสดทันที ประเมินราคาออนไลน์ฟรี!">
     <meta name="keywords" content="รับซื้อตั๋วจำนำ, รับซื้อตั๋วจำนำทอง, ขายตั๋วจำนำทอง, ตั๋วจำนำ, ขายตั๋วจำนำ, รับซื้อตั๋วจำนำอุดรธานี, รับซื้อตั๋วจำนำขอนแก่น, รับซื้อตั๋วจำนำหนองคาย, รับซื้อตั๋วจำนำหนองบัวลำภู, ขายตั๋วจำนำ, ไถ่ถอนทอง, Gold18 Udon, คุณต๋อง">
     <meta name="author" content="รับซื้อตั๋วจำนำทอง By คุณต๋อง (Gold18Udon)">
@@ -300,7 +300,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากครับ เล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/P1 (1).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P1(1).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.อุดรธานี</p>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำครับ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/P1 (2).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P1(2).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองบัวลำภู</p>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก พูดจาดีมากๆค่ะ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/P1 (3).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P1(3).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ขอนแก่น</p>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1 (4).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P1(4).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1 (5).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P1(5).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1 (6).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P1(6).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1 (7).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P1(7).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">บริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1 (8).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P1(8).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -382,32 +382,48 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">รีวิวลูกค้า</h2>
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
-    <img src="P-GitHub/Review/rw-1.png" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-2.png" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-3.png" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-4.png" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-5.png" alt="รีวิวลูกค้า 5" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-6.png" alt="รีวิวลูกค้า 6" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-7.png" alt="รีวิวลูกค้า 7" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-8.png" alt="รีวิวลูกค้า 8" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-9.png" alt="รีวิวลูกค้า 9" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw-10.png" alt="รีวิวลูกค้า 10" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (1).png" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (2).png" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (3)-3.png" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (4).png" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (5).png" alt="รีวิวลูกค้า 5" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (6).png" alt="รีวิวลูกค้า 6" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (7).png" alt="รีวิวลูกค้า 7" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (8).png" alt="รีวิวลูกค้า 8" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (9).png" alt="รีวิวลูกค้า 9" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+    <img src="P-GitHub/Review/rw- (10).png" alt="รีวิวลูกค้า 10" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
 </div>
             </div>
         </section>
 
-        <section id="service-area" class="py-16 md:py-20 bg-secondary">
-            <div class="container mx-auto px-6 text-center">
-                <h2 class="text-2xl md:text-3xl font-bold text-dark-red mb-8">พื้นที่ให้บริการ</h2>
-                <div class="flex flex-wrap justify-center gap-4 text-lg">
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">อุดรธานี</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">ขอนแก่น</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">หนองคาย</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">หนองบัวลำภู</span>
-                    <span class="bg-gray-100 text-gray-700 py-2 px-4 rounded-full">และจังหวัดใกล้เคียง</span>
-                </div>
+<section id="service-area" class="py-16 md:py-20 bg-secondary">
+    <div class="container mx-auto px-6 text-center">
+        <h2 class="text-2xl md:text-3xl font-bold text-dark-red mb-12">พื้นที่ให้บริการ</h2>
+        
+        <div class="max-w-4xl mx-auto text-left space-y-8">
+            <div>
+                <h3 class="text-xl font-semibold text-gray-800 mb-2">📍 ภาคอีสาน</h3>
+                <p class="text-gray-600 leading-relaxed">
+                    อุดรธานี, ขอนแก่น, กาฬสินธุ์, หนองคาย, หนองบัวลำภู, สกลนคร, นครพนม, เลย, ชัยภูมิ, มหาสารคาม และจังหวัดใกล้เคียง
+                </p>
             </div>
-        </section>
+
+            <div>
+                <h3 class="text-xl font-semibold text-gray-800 mb-2">📍 ภาคกลาง</h3>
+                <p class="text-gray-600 leading-relaxed">
+                    กรุงเทพฯ, นครสวรรค์, สมุทรปราการ, สมุทรสาคร, ราชบุรี, นครปฐม, นนทบุรี, ปทุมธานี, อยุธยา และจังหวัดใกล้เคียง
+                </p>
+            </div>
+
+            <div>
+                <h3 class="text-xl font-semibold text-gray-800 mb-2">📍 ภาคตะวันออก</h3>
+                <p class="text-gray-600 leading-relaxed">
+                    ชลบุรี, ระยอง, ปราจีนบุรี, ฉะเชิงเทรา, นครนายก และจังหวัดใกล้เคียง
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
     </main>
 
