--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
                 <h1 class="text-base md:text-lg font-semibold text-gray-800">By คุณต๋อง</h1>
             </a>
             <nav class="hidden md:flex items-center space-x-8 text-gray-700 font-medium">
-                <a href="#appraisal" class="hover:text-accent transition duration-300">ประเมินราคา</a>
-                <a href="#steps" class="hover:text-accent transition duration-300">ขั้นตอน</a>
-                <a href="#about" class="hover:text-accent transition duration-300">เกี่ยวกับเรา</a>
-                <a href="#contact" class="hover:text-accent transition duration-300">ติดต่อเรา</a> 
+    <a href="#appraisal" class="hover:text-accent transition duration-300">ประเมินราคา</a>
+    <a href="#steps" class="hover:text-accent transition duration-300">ขั้นตอน</a>
+    <a href="#contact" class="hover:text-accent transition duration-300">ติดต่อเรา</a> 
+    <a href="#about" class="hover:text-accent transition duration-300">เกี่ยวกับเรา</a>  </nav> 
             </nav>
             <button id="mobile-menu-button" class="md:hidden text-gray-800 text-2xl">
                 <i class="fas fa-bars"></i>
             </button>
         </div>
         <div id="mobile-menu" class="md:hidden hidden bg-secondary border-t border-gray-200">
-            <a href="#appraisal" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ประเมินราคา</a>
-            <a href="#steps" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ขั้นตอน</a>
-            <a href="#reviews" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">รีวิว</a>
-            <a href="#about" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">เกี่ยวกับเรา</a>
-            <a href="#contact" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ติดต่อเรา</a>
+    <a href="#appraisal" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ประเมินราคา</a>
+    <a href="#steps" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ขั้นตอน</a>
+    <a href="#reviews" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">รีวิว</a>
+    <a href="#contact" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">ติดต่อเรา</a>
+    <a href="#about" class="block py-3 px-6 text-gray-700 hover:bg-primary hover:text-gray-800">เกี่ยวกับเรา</a> </div>
         </div>
     </header>
 
