--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">รวดเร็วทันใจบริการดีมากครับ เล็กๆน้อยๆพี่เขาก็มาปิดให้ถึงที่เลยครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/P1(1).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P-1.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.อุดรธานี</p>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ไม่มีอะไรจะแนะนำครับ แต่จะขอบอกว่าขอบคุณจากใจในฐานะผู้ใช้บริการของพี่ครับ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/P1(2).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P-2.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองบัวลำภู</p>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">พนักงานน่ารัก พูดจาดีมากๆค่ะ</p>
                         <div class="flex items-center mt-auto">
-                            <img src="P-GitHub/Photo/P1(3).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                            <img src="P-GitHub/Photo/P-3.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.ขอนแก่น</p>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1(4).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-4.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1(5).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-5.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1(6).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-6.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">ผู้จัดการสาขาบริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1(7).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-7.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                         </div>
                         <p class="text-gray-600 mb-4 flex-grow">บริการดีมาก พิสูจน์ทองให้ลูกค้ามั่นใจในทองคำของทางร้าน</p>
                         <div class="flex items-center mt-auto">
-                           <img src="P-GitHub/Photo/P1(8).png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
+                           <img src="P-GitHub/Photo/P-8.png" alt="Avatar" class="w-10 h-10 rounded-full mr-3">
                             <p class="font-semibold text-gray-700">- คุณลูกค้า จ.หนองคาย</p>
                         </div>
                     </div>
@@ -382,18 +382,18 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">รีวิวลูกค้า</h2>
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
-    <img src="P-GitHub/Review/rw- (1).png" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (2).png" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (3)-3.png" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (4).png" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (5).png" alt="รีวิวลูกค้า 5" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (6).png" alt="รีวิวลูกค้า 6" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (7).png" alt="รีวิวลูกค้า 7" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (8).png" alt="รีวิวลูกค้า 8" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (9).png" alt="รีวิวลูกค้า 9" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-    <img src="P-GitHub/Review/rw- (10).png" alt="รีวิวลูกค้า 10" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
-</div>
-            </div>
+            <img src="P-GitHub/Review/rw-1.png" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-2.png" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-3.png" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-4.png" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-5.png" alt="รีวิวลูกค้า 5" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-6.png" alt="รีวิวลูกค้า 6" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-7.png" alt="รีวิวลูกค้า 7" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-8.png" alt="รีวิวลูกค้า 8" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-9.png" alt="รีวิวลูกค้า 9" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-10.png" alt="รีวิวลูกค้า 10" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+
+        </div>
         </section>
 
 <section id="service-area" class="py-16 md:py-20 bg-secondary">
