--- a/index.html
+++ b/index.html
@@ -259,6 +259,24 @@
             </div>
         </section>
         
+        <section id="customer-photos" class="py-16 md:py-20 bg-primary">
+            <div class="container mx-auto px-6">
+                <h2 class="text-2xl md:text-3xl font-bold text-center mb-12 text-dark-red">รีวิวผู้ใช้บริการ</h2>
+                <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
+            <img src="P-GitHub/Review/rw-1.png" alt="รีวิวลูกค้า 1" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-2.png" alt="รีวิวลูกค้า 2" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-3.png" alt="รีวิวลูกค้า 3" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-4.png" alt="รีวิวลูกค้า 4" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-5.png" alt="รีวิวลูกค้า 5" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-6.png" alt="รีวิวลูกค้า 6" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-7.png" alt="รีวิวลูกค้า 7" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-8.png" alt="รีวิวลูกค้า 8" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-9.png" alt="รีวิวลูกค้า 9" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+            <img src="P-GitHub/Review/rw-10.png" alt="รีวิวลูกค้า 10" class="w-full h-auto object-cover rounded-lg shadow-md" loading="lazy">
+
+        </div>
+        </section>
+
         <section id="why-us" class="py-16 md:py-20 bg-primary">
             <div class="container mx-auto px-6">
                  <div class="text-center mb-12">
