--- a/index.html
+++ b/index.html
@@ -457,35 +457,49 @@
                 <div class="relative max-w-4xl mx-auto carousel-container">
                     <div id="photo-carousel-wrapper" class="carousel-wrapper">
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-1.png" alt="รีวิวรูปภาพลูกค้า 1">
+                            <img src="P-GitHub/Review2/rw1.png" alt="รีวิวรูปภาพลูกค้า 1">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-2.png" alt="รีวิวรูปภาพลูกค้า 2">
+                            <img src="P-GitHub/Review2/rw2.png" alt="รีวิวรูปภาพลูกค้า 2">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-3.png" alt="รีวิวรูปภาพลูกค้า 3">
+                            <img src="P-GitHub/Review2/rw3.png" alt="รีวิวรูปภาพลูกค้า 3">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-4.png" alt="รีวิวรูปภาพลูกค้า 4">
+                            <img src="P-GitHub/Review2/rw4.png" alt="รีวิวรูปภาพลูกค้า 4">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-5.png" alt="รีวิวรูปภาพลูกค้า 5">
+                            <img src="P-GitHub/Review2/rw5.png" alt="รีวิวรูปภาพลูกค้า 5">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-6.png" alt="รีวิวรูปภาพลูกค้า 6">
+                            <img src="P-GitHub/Review2/rw6.png" alt="รีวิวรูปภาพลูกค้า 6">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-7.png" alt="รีวิวรูปภาพลูกค้า 7">
+                            <img src="P-GitHub/Review2/rw7.png" alt="รีวิวรูปภาพลูกค้า 7">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-8.png" alt="รีวิวรูปภาพลูกค้า 8">
+                            <img src="P-GitHub/Review2/rw8.png" alt="รีวิวรูปภาพลูกค้า 8">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-9.png" alt="รีวิวรูปภาพลูกค้า 9">
+                            <img src="P-GitHub/Review2/rw9.png" alt="รีวิวรูปภาพลูกค้า 9">
                         </div>
                         <div class="carousel-slide">
-                            <img src="P-GitHub/Review/rw-10.png" alt="รีวิวรูปภาพลูกค้า 10">
+                            <img src="P-GitHub/Review2/rw10.png" alt="รีวิวรูปภาพลูกค้า 10">
                         </div>
+                        <div class="carousel-slide">
+                            <img src="P-GitHub/Review2/rw11.png" alt="รีวิวรูปภาพลูกค้า 11">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="P-GitHub/Review2/rw12.png" alt="รีวิวรูปภาพลูกค้า 12">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="P-GitHub/Review2/rw13.png" alt="รีวิวรูปภาพลูกค้า 13">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="P-GitHub/Review2/rw14.png" alt="รีวิวรูปภาพลูกค้า 14">
+                        </div>
+                        <div class="carousel-slide">
+                            <img src="P-GitHub/Review2/rw15.png" alt="รีวิวรูปภาพลูกค้า 15">
                         </div>
                     <button id="prev-photo-slide" class="carousel-button prev">❮</button>
                     <button id="next-photo-slide" class="carousel-button next">❯</button>
@@ -545,7 +559,7 @@
                                 <div class="ml-4">
                                     <p class="text-lg text-gray-100">สำหรับลูกค้าใหม่และลูกค้าเก่า เรามีโปรโมชั่นพิเศษที่น่าสนใจรอคุณอยู่</p>
                                 </div>
-                            <div class="mt-8">
+                            <div class="mt-8 text-center">
                             <a href="https://lin.ee/4WGZnHX" target="_blank" class="inline-block line-button font-bold py-3 px-8 rounded-full text-lg shadow-lg hover:shadow-xl transition-shadow">
                             <i class="fab fa-line mr-2"></i>
                             ส่งข้อมูลประเมินราคาทาง LINE
